// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenu renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="relative list-none outline-none shadow-2 py-2 px-0 m-0 rounded-sm PicassoSidebarMenu-root"
      role="menu"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`SidebarMenu with bottom 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="relative list-none outline-none shadow-2 py-2 px-0 m-0 rounded-sm PicassoSidebarMenu-root PicassoSidebarMenu-bottom"
      role="menu"
      tabindex="-1"
    />
  </div>
</div>
`;
